k8s/kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icecharts
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - icecharts.penguincloud.io
    secretName: icecharts-prod-tls
  rules:
  - host: icecharts.penguincloud.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
